--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
 body{
     background-image: url(../images/moroccan-flower-dark.png)
 }
+img{
+    width: 200px;
+    height: 200px;
+    padding: 5px;
+    border-color: black;
+    border: black;
+
+}
